; ModuleID = '/home/carl/AnghaBench/xLua/build/luasocket/extr_except.c_protected_.c'
source_filename = "/home/carl/AnghaBench/xLua/build/luasocket/extr_except.c_protected_.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@LUA_MULTRET = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @protected_ to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @protected_(i32* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  %4 = load i32*, i32** %3, align 8
  %5 = call i32 @lua_upvalueindex(i32 1)
  %6 = call i32 @lua_pushvalue(i32* %4, i32 %5)
  %7 = load i32*, i32** %3, align 8
  %8 = call i32 @lua_insert(i32* %7, i32 1)
  %9 = load i32*, i32** %3, align 8
  %10 = load i32*, i32** %3, align 8
  %11 = call i32 @lua_gettop(i32* %10)
  %12 = sub nsw i32 %11, 1
  %13 = load i32, i32* @LUA_MULTRET, align 4
  %14 = call i64 @lua_pcall(i32* %9, i32 %12, i32 %13, i32 0)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %1
  %17 = load i32*, i32** %3, align 8
  %18 = call i64 @unwrap(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %16
  store i32 2, i32* %2, align 4
  br label %28

21:                                               ; preds = %16
  %22 = load i32*, i32** %3, align 8
  %23 = call i32 @lua_error(i32* %22)
  br label %24

24:                                               ; preds = %21
  store i32 0, i32* %2, align 4
  br label %28

25:                                               ; preds = %1
  %26 = load i32*, i32** %3, align 8
  %27 = call i32 @lua_gettop(i32* %26)
  store i32 %27, i32* %2, align 4
  br label %28

28:                                               ; preds = %25, %24, %20
  %29 = load i32, i32* %2, align 4
  ret i32 %29
}

declare dso_local i32 @lua_pushvalue(i32*, i32) #1

declare dso_local i32 @lua_upvalueindex(i32) #1

declare dso_local i32 @lua_insert(i32*, i32) #1

declare dso_local i64 @lua_pcall(i32*, i32, i32, i32) #1

declare dso_local i32 @lua_gettop(i32*) #1

declare dso_local i64 @unwrap(i32*) #1

declare dso_local i32 @lua_error(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
